fix: menu too dark in dark mode
commit ea81099175c824eba2819fcd53a7759f9bf0041c
Author: BedirT <tapkan@ualberta.ca>
Date:   Thu Sep 22 13:35:46 2022 -0600

    theme vars fix

--- a/assets/css/core/theme-vars.css
+++ b/assets/css/core/theme-vars.css
@@ -55,6 +55,10 @@
     --link-underline-shadow: 0 1px 0 var(--link-color);
     --link-hover-underline-color: var(--link-hover-color);
     --link-hover-underline-shadow: 0 2px 0 var(--link-hover-underline-color);
+
+    /* for type pages theming */
+    --signature: var(--primary);
+    --signature-bg: var(--secondary);
 }
 
 .list-page {
